# hangar-bay

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  render.yaml
app/backend/: .dockerignore  .env.example  .flake8  Dockerfile  pyproject.toml  requirements.txt  setup.cfg
app/backend/docker/: compose.dependencies.yml  compose.env  compose.observability.yml  compose.yml  grafana-cloud-provisioning.env.example  grafana-cloud.env.example
app/backend/docker/alloy/: config.alloy
app/backend/docker/loki/: config.yaml  config.yml
app/backend/docker/otel-collector/: config.yaml  config.yml
app/backend/docker/prometheus/: prometheus.yml
app/backend/observability/: provision_dashboards.py
app/backend/observability/dashboards/: hangar-bay-backend.json
app/backend/src/: check_alembic_version.py  export_openapi.py  hangar_bay_dev.db
app/backend/src/alembic/: env.py
app/backend/src/alembic/versions/: 01e3c3fb3e96_check_after_manual_add.py  3aca702a74e3_baseline.py  3fa2eefb2d7e_rename_contract_type_to_type.py  651398d2a1bf_add_esitypecache_table_for_.py  7c17d7179a7d_manual_add_contract_fields.py  baa67b53c016_create_users_table_with_account_types_.py  c199a09ccc55_add_contract_item_and_market_group_.py  c74c05fbe554_initial_empty_migration.py
app/backend/src/fastapi/: main.py
app/backend/src/fastapi_app/: config.py  db.py  main.py
app/backend/src/fastapi_app/api/: auth.py  contracts.py  notifications.py  ops.py  saved_searches.py  watchlist.py
app/backend/src/fastapi_app/core/: cache.py  config.py  current_user.py  dependencies.py  esi_client_class.py  exceptions.py  http_client.py  logging.py  metrics.py  scheduler.py  session.py  token_cipher.py
(+496 files in other folders)
